Content Spacing Fix

--- a/index1.css
+++ b/index1.css
@@ -288,12 +288,10 @@ section p {
 }
 .scroll-down {
   position: absolute;
-  bottom: 30px;
-  left: 50%;
+  bottom: 30px; left: 50%;
+  width: 32px; height: 32px;
   margin-left: -16px;
   display: block;
-  width: 32px;
-  height: 32px;
   border: 2px solid #FFF;
   background-size: 14px auto;
   border-radius: 50%;
@@ -308,10 +306,9 @@ section p {
   position: absolute;
   top: calc(50% - 8px);
   left: calc(50% - 6px);
+  width: 12px; height: 12px;
   transform: rotate(-45deg);
   display: block;
-  width: 12px;
-  height: 12px;
   content: "";
   border: 2px solid white;
   border-width: 0px 0 2px 2px;
